add rebase command
